@@ -4,6 +4,7 @@ ikiwiki (2.72) UNRELEASED; urgency=low
   * Add deprecation warning for GlobLists, which will stop working in 3.0.
   * camelcase: Add camelcase_ignore setting.
   * googlecalendar: Add runtime deprecation warning.
+  * comments: Deal with users entering unqualified or partial urls.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2008 19:02:16 -0500
 
